tests/transpiler/x/scala/partial_application.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/partial_application.scala:3: error: ':' expected but ',' found.
    def add(a, b) = {
             ^
/workspace/mochi/tests/transpiler/x/scala/partial_application.scala:10: error: identifier expected but '}' found.
}
^
two errors found
