tests/transpiler/x/scala/partial_application.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:51:41 GMT+7
object Main {
    def add(a, b) = {
        (a + b)
    }
    def main(args: Array[String]): Unit = {
        val add5 = add(5)
        println(add5(3))
    }
}
